<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CPU Spy</string>
    <string name="version_name">1.2</string>

    <string name="unused_cpu_states">Unused CPU States</string>
    <string name="total_state_time">Total State Time</string>
    <string name="kernel_info">Kernel Info</string>

    <string name="states_warning">No states file found. Are you sure your phone is compatible?\n\nIf you are running a custom ROM or kernel, try contacting its developer to inform him that the states file is not readable.</string>

    <string name="settings">Settings</string>
    <string name="settings_header_general">General</string>
    <string name="settings_header_info">Info</string>
    <string name="settings_title_about">About</string>
    <string name="settings_title_library">Open Source Libraries</string>
    <string name="settings_title_autorefresh">Automatic Refresh</string>
    <string name="settings_summary_about">About the app and its developer</string>
    <string name="settings_summary_autorefresh">Refresh the CPU timers automatically</string>

    <string name="settings_message_about"><![CDATA[
    Simple app for viewing the amount of time the CPU spends in each frequency state.<br/><br/>
    Original app created by <b>Brandon Valosek</b>.<br/><br/>
    Redesigned by <b>Rob Beane</b>.<br/>
    <a href=\'https://google.com/+RobBeane\'>Google+</a>&nbsp;&nbsp;
    <a href=\'https://github.com/existz\'>Github</a>&nbsp;&nbsp;
    <a href=\'http://goo.gl/7zK4tI\'>XDA Thread</a><br/><br/>
    Icon designed by <a href=\'https://google.com/+NathanielHukelSpeaks\'>Nathaniel Hukel</a>.</b>
    ]]></string>

    <string name="settings_message_library"><![CDATA[
    &#8226; <b>Android Support Library</b><br/>
    <small> Android Open Source Project - <a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>Apache 2.0</a>&nbsp;<br/><br/></small>
    &#8226; <b><a href=\'https://github.com/afollestad/material-dialogs\'>Material Dialogs</a></b><br/>
    <small>Aidan Follestad - <a href=\'http://opensource.org/licenses/MIT\'>The MIT License</a>&nbsp;<br/><br/></small>
    &#8226; <b><a href=\'https://github.com/nispok/snackbar\'>Snackbar</a></b><br/>
    <small>William Mora - <a href=\'http://opensource.org/licenses/MIT\'>The MIT License</a></small>
    ]]></string>

    <string name="app_name_and_version" translatable="false"><![CDATA[
    <b>CPU Spy Material</b>&nbsp;<font color="#888888">v%1$s</font>
    ]]></string>

</resources>
