<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_header_general" >
        <CheckBoxPreference
            android:key="autoRefresh"
            android:title="@string/settings_title_autorefresh"
            android:summary="@string/settings_summary_autorefresh"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_header_info" >
        <Preference
            android:key="about"
            android:title="@string/settings_title_about"
            android:summary="@string/settings_summary_about"
            android:persistent="false" >
        </Preference>

        <Preference
            android:key="library"
            android:title="@string/settings_title_library"
            android:persistent="false" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
