<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ui_states_view"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/text_primary_color"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/ui_charged_img"
                android:src="@drawable/ic_charged_info"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="80dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:scaleType="fitXY"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ui_charged_view"
                style="@style/chargedView"
                android:text="@string/charged_view_message"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/ui_states_warning"
                android:padding="6dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/states_warning"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="20sp"
                android:background="#ffdb4437"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ui_header_total_state_time"
                style="@style/infoHeader"
                android:text="@string/total_state_time"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/ui_total_state_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/text_primary_color"
                android:textSize="23sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/ui_header_additional_states"
                style="@style/infoHeader"
                android:text="@string/unused_cpu_states"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/ui_additional_states"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/text_primary_color"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ui_header_kernel_string"
                style="@style/infoHeader"
                android:text="@string/kernel_info"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/ui_kernel_string"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/text_primary_color"
                android:textSize="17sp"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>

